Deleted height from images to stop distortion

--- a/app/client/sass/about_us.scss
+++ b/app/client/sass/about_us.scss
@@ -20,7 +20,6 @@
 }
 
 .headshots {
-  height: 200px;
   width: 200px;
 }
 
