--- a/app/client/sass/desktop_view.scss
+++ b/app/client/sass/desktop_view.scss
@@ -4,7 +4,6 @@
   }
 
   .headshots {
-    height: 300px;
     width: 300px;
   }
 
