--- a/app/client/sass/job-information.scss
+++ b/app/client/sass/job-information.scss
@@ -56,7 +56,6 @@
 
 .thumbnail {
   margin-top: 1em;
-  height: 140px;
   width: 140px;
   border: 2px solid $DreamThemeColorTwo;
 }
