--- a/app/client/sass/tablet_view.scss
+++ b/app/client/sass/tablet_view.scss
@@ -63,7 +63,6 @@
   }
 
   .headshots {
-    height: 250px;
     width: 250px;
     border-radius: 0.5em;
   }
@@ -146,7 +145,6 @@
   }
 
   .thumbnail {
-    height: 240px;
     width: 240px;
   }
 
